updated code to ensure variables were lowercase and updated README to clarify time frame of dataset

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -60,9 +60,9 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
-    "Base = automap_base()\n",
+    "base = automap_base()\n",
     "# reflect the tables\n",
-    "Base.prepare(autoload_with = engine)"
+    "base.prepare(autoload_with = engine)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    ],
    "source": [
     "# View all of the classes that automap found\n",
-    "Base.classes.keys()\n"
+    "base.classes.keys()\n"
    ]
   },
   {
@@ -93,8 +93,8 @@
    "outputs": [],
    "source": [
     "# Save references to each table\n",
-    "Measurement = Base.classes.measurement\n",
-    "Station = Base.classes.station"
+    "measurement = base.classes.measurement\n",
+    "station = base.classes.station"
    ]
   },
   {
@@ -125,10 +125,10 @@
     }
    ],
    "source": [
-    "#inspector to get Measurement table schema\n",
+    "#inspector to get measurement table schema\n",
     "inspector = inspect(engine)\n",
-    "columns_M = inspector.get_columns('measurement')\n",
-    "for column in columns_M:\n",
+    "columns_m = inspector.get_columns('measurement')\n",
+    "for column in columns_m:\n",
     "    print(column['name'], column['type'])"
    ]
   },
@@ -151,9 +151,9 @@
     }
    ],
    "source": [
-    "#inspector to get Station table schema\n",
-    "columns_S = inspector.get_columns('station')\n",
-    "for column in columns_S:\n",
+    "#inspector to get station table schema\n",
+    "columns_s = inspector.get_columns('station')\n",
+    "for column in columns_s:\n",
     "    print(column['name'], column['type'])"
    ]
   },
@@ -182,7 +182,7 @@
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
-    "recent_date = session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
+    "recent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
     "recent_date"
    ]
   },
@@ -1218,8 +1218,8 @@
    ],
    "source": [
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "precip_results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date <= recent_date[0]).\\\n",
-    "                filter(Measurement.date >= year_ago).all()\n",
+    "precip_results = session.query(measurement.date, measurement.prcp).filter(measurement.date <= recent_date[0]).\\\n",
+    "                filter(measurement.date >= year_ago).all()\n",
     "precip_results"
    ]
   },
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
        "Name: Precipitation, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,12 +1543,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Station Analysis"
+    "# Exploratory station Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1561,13 +1561,13 @@
    ],
    "source": [
     "# Design a query to calculate the total number of stations in the dataset\n",
-    "station_results = session.query(Station.station).distinct().count()\n",
+    "station_results = session.query(station.station).distinct().count()\n",
     "print(f'there are {station_results} unique stations in the dataset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,13 +1592,13 @@
    "source": [
     "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
     "# List the stations and their counts in descending order.\n",
-    "most_active = session.query(Measurement.station, func.count(Measurement.station)).group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()\n",
+    "most_active = session.query(measurement.station, func.count(measurement.station)).group_by(measurement.station).order_by(func.count(measurement.station).desc()).all()\n",
     "most_active"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1607,7 @@
        "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,17 +1615,17 @@
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
     "most_active_id = most_active[0][0]\n",
-    "sel = [Measurement.station, \n",
-    "       func.min(Measurement.tobs),\n",
-    "       func.max(Measurement.tobs),\n",
-    "       func.avg(Measurement.tobs)]\n",
-    "most_active_temps = session.query(*sel).filter(Measurement.station == most_active_id).all()\n",
+    "sel = [measurement.station, \n",
+    "       func.min(measurement.tobs),\n",
+    "       func.max(measurement.tobs),\n",
+    "       func.avg(measurement.tobs)]\n",
+    "most_active_temps = session.query(*sel).filter(measurement.station == most_active_id).all()\n",
     "most_active_temps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1987,7 +1987,7 @@
        " ('2017-08-18', 79.0)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,14 +1996,14 @@
     "# Using the most active station id\n",
     "# Query the last 12 months of temperature observation data for this station\n",
     "\n",
-    "temp_results = session.query(Measurement.date, Measurement.tobs).filter(Measurement.date <= recent_date[0]).filter(Measurement.date >= year_ago).\\\n",
-    "                filter(Measurement.station == most_active[0][0]).all()\n",
+    "temp_results = session.query(measurement.date, measurement.tobs).filter(measurement.date <= recent_date[0]).filter(measurement.date >= year_ago).\\\n",
+    "                filter(measurement.station == most_active[0][0]).all()\n",
     "temp_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
        "[352 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2131,7 @@
        "<Axes: xlabel='Temperature', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
