updating README and cleanup of app.py and ipynb files

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python SQL toolkit and Object Relational Mapper\n",
+    "# Import dependencies: SQLAlchemy \n",
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create engine to hawaii.sqlite\n",
+    "# creating engine to hawaii.sqlite\n",
     "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
@@ -59,9 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reflect an existing database into a new model\n",
+    "# reflecting an existing database into a new model\n",
     "base = automap_base()\n",
-    "# reflect the tables\n",
+    "# reflecting existing tables\n",
     "base.prepare(autoload_with = engine)"
    ]
   },
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "# View all of the classes that automap found\n",
+    "# View all classes that automap found\n",
     "base.classes.keys()\n"
    ]
   },
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n",
+    "# Saving references to each table\n",
     "measurement = base.classes.measurement\n",
     "station = base.classes.station"
    ]
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n",
+    "# Creating session from Python to the DB\n",
     "session = Session(engine)"
    ]
   },
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "# Find the most recent date in the data set.\n",
+    "# Finding the most recent date in the data set.\n",
     "recent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
     "recent_date"
    ]
@@ -192,9 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "# Starting from the most recent data point in the database. \n",
-    "# Calculate the date one year from the last date in data set.\n",
+    "# Calculating the date one year from the last date in data set.\n",
     "year_ago = dt.date(2017, 8, 23) - dt.timedelta(days = 365)"
    ]
   },
@@ -1217,7 +1215,7 @@
     }
    ],
    "source": [
-    "# Perform a query to retrieve the data and precipitation scores\n",
+    "# Querying to retrieve the data and precipitation scores of the last 12 months\n",
     "precip_results = session.query(measurement.date, measurement.prcp).filter(measurement.date <= recent_date[0]).\\\n",
     "                filter(measurement.date >= year_ago).all()\n",
     "precip_results"
@@ -1298,7 +1296,7 @@
     }
    ],
    "source": [
-    "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
+    "# Saving query results as a Pandas DataFrame\n",
     "precip_df = pd.DataFrame(precip_results, columns = ['Date', 'Precipitation'])\n",
     "precip_df.head()"
    ]
@@ -1417,6 +1415,7 @@
     }
    ],
    "source": [
+    "#sorting values by date\n",
     "precip_df = precip_df.sort_values('Date')\n",
     "precip_df"
    ]
@@ -1446,6 +1445,7 @@
     }
    ],
    "source": [
+    "#view date column\n",
     "print(precip_df['Date'])"
    ]
   },
@@ -1455,6 +1455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert date column to datetime \n",
     "precip_df['Date'] = pd.to_datetime(precip_df['Date'])"
    ]
   },
@@ -1472,6 +1473,7 @@
     }
    ],
    "source": [
+    "#convert datetime format\n",
     "recent_date_dt = dt.datetime.strptime(recent_date[0], '%Y-%m-%d')\n",
     "print(recent_date_dt)"
    ]
@@ -1502,9 +1504,9 @@
     }
    ],
    "source": [
-    "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "# Using Pandas Plotting with Matplotlib to plot \n",
     "plt.figure(figsize=(20,20))\n",
-    "#tick_list = pd.date_range(start = year_ago_dt, end = recent_date_dt, freq = '3MS').tolist()\n",
+    "\n",
     "ax = precip_df.plot(x = 'Date', y = 'Precipitation', legend = True, xlabel = 'Date', ylabel = 'Precipitation(In.)',\\\n",
     "               title = 'Precipitation by Day', xlim=(year_ago, recent_date_dt), rot = 90)\n",
     "\n"
@@ -1535,7 +1537,7 @@
     }
    ],
    "source": [
-    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "# Calculating summary statistics for the precipitation data\n",
     "precip_df['Precipitation'].describe()"
    ]
   },
@@ -1560,7 +1562,7 @@
     }
    ],
    "source": [
-    "# Design a query to calculate the total number of stations in the dataset\n",
+    "# Querying the total number of unique stations in the dataset\n",
     "station_results = session.query(station.station).distinct().count()\n",
     "print(f'there are {station_results} unique stations in the dataset')"
    ]
@@ -1590,8 +1592,8 @@
     }
    ],
    "source": [
-    "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
-    "# List the stations and their counts in descending order.\n",
+    "# Querying to find the most active stations (i.e. which stations have the most rows?) by listing counts in descending order\n",
+    "\n",
     "most_active = session.query(measurement.station, func.count(measurement.station)).group_by(measurement.station).order_by(func.count(measurement.station).desc()).all()\n",
     "most_active"
    ]
@@ -1613,7 +1615,7 @@
     }
    ],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "#Calculating the lowest, highest, and average temperature of most active station id\n",
     "most_active_id = most_active[0][0]\n",
     "sel = [measurement.station, \n",
     "       func.min(measurement.tobs),\n",
@@ -1993,8 +1995,7 @@
     }
    ],
    "source": [
-    "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station\n",
+    "# Querying the last 12 months of temperature observation data of most active station id\n",
     "\n",
     "temp_results = session.query(measurement.date, measurement.tobs).filter(measurement.date <= recent_date[0]).filter(measurement.date >= year_ago).\\\n",
     "                filter(measurement.station == most_active[0][0]).all()\n",
@@ -2115,7 +2116,7 @@
     }
    ],
    "source": [
-    "# plot the results as a histogram\n",
+    "# creating dataframe for plotting\n",
     "temp_df = pd.DataFrame(temp_results, columns = ['Date', 'Temperature'])\n",
     "temp_df"
    ]
@@ -2147,7 +2148,7 @@
     }
    ],
    "source": [
-    "# plot the results as a histogram\n",
+    "# plotting results as a histogram\n",
     "temp_df.plot(kind = 'hist', x = 'Date', y = 'Temperature', legend = True, xlabel = 'Temperature', bins =12)"
    ]
   },
